fix:NFC HDF Flex Code Rectification
Signed-off-by: hefeiyue <hefeiyue@h-partners.com>

--- a/frameworks/js/napi/cardEmulation/BUILD.gn
+++ b/frameworks/js/napi/cardEmulation/BUILD.gn
@@ -41,7 +41,7 @@ ohos_shared_library("cardemulation") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
   ]
