--- a/frameworks/js/napi/tag/BUILD.gn
+++ b/frameworks/js/napi/tag/BUILD.gn
@@ -52,7 +52,7 @@ ohos_shared_library("tag") {
   external_deps = [
     "ability_base:want",
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
     "ipc:ipc_napi_common",
     "napi:ace_napi",
