--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -93,7 +93,7 @@ ohos_shared_library("nfc_service") {
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "eventhandler:libeventhandler",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
     "miscdevice:vibrator_interface_native",
     "preferences:native_preferences",
