--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -138,12 +138,31 @@ ohos_unittest("services_test") {
   subsystem_name = "communication"
 }
 
+ohos_unittest("services_tags_test") {
+  module_out_path = "nfc/services"
+
+  sources = [
+    "services_tags_test/nfc_service_tdd.cpp",
+    "services_tags_test/tag_session_stub_test.cpp",
+  ]
+
+  configs = [ ":nfc_service_unit_test_config" ]
+
+  deps = unit_test_deps
+
+  external_deps = unit_test_external_deps
+
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
 group("nfc_service_unittest") {
   testonly = true
   deps = [
     ":cardemulation_test",
     ":controller_test",
     ":public_test",
+    ":services_tags_test",
     ":services_test",
     ":tags_test",
   ]
