--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -156,11 +156,27 @@ ohos_unittest("services_tags_test") {
   subsystem_name = "communication"
 }
 
+ohos_unittest("nci_adapter_test") {
+  module_out_path = "nfc/services"
+
+  sources = [ "nci_adapter_test/nfcc_host_test.cpp" ]
+
+  configs = [ ":nfc_service_unit_test_config" ]
+
+  deps = unit_test_deps
+
+  external_deps = unit_test_external_deps
+
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
 group("nfc_service_unittest") {
   testonly = true
   deps = [
     ":cardemulation_test",
     ":controller_test",
+    ":nci_adapter_test",
     ":public_test",
     ":services_tags_test",
     ":services_test",
