--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -144,6 +144,7 @@ ohos_unittest("services_tags_test") {
   sources = [
     "services_tags_test/nfc_service_tdd.cpp",
     "services_tags_test/tag_session_stub_test.cpp",
+    "services_tags_test/tag_session_test.cpp",
   ]
 
   configs = [ ":nfc_service_unit_test_config" ]
