--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -164,7 +164,11 @@ ohos_unittest("services_tags_test") {
 ohos_unittest("nci_adapter_test") {
   module_out_path = "nfc/services"
 
-  sources = [ "nci_adapter_test/nfcc_host_test.cpp" ]
+  sources = [
+    "nci_adapter_test/nfcc_host_test.cpp",
+    "nci_adapter_test/nfcc_nci_adapter_test.cpp",
+    "nci_adapter_test/tag_nci_adapter_test.cpp",
+  ]
 
   configs = [ ":nfc_service_unit_test_config" ]
 
