NFC-TDD用例分支覆盖
Signed-off-by: LiYu <liyu194@huawei.com>

--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -147,6 +147,7 @@ ohos_unittest("services_tags_test") {
 
   sources = [
     "services_tags_test/nfc_service_tdd.cpp",
+    "services_tags_test/tag_dispatcher_test.cpp",
     "services_tags_test/tag_session_stub_test.cpp",
     "services_tags_test/tag_session_test.cpp",
   ]
