--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -97,6 +97,7 @@ ohos_unittest("tags_test") {
     "tags_test/nfca_tag_test.cpp",
     "tags_test/nfcb_tag_test.cpp",
     "tags_test/nfcf_tag_test.cpp",
+    "tags_test/tag_foreground_test.cpp",
     "tags_test/tag_info_test.cpp",
     "tags_test/taginfo_parcelable_test.cpp",
   ]
