--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -87,6 +87,7 @@ ohos_shared_library("nfc_service") {
   external_deps = [
     "ability_base:want",
     "ability_runtime:ability_manager",
+    "ability_runtime:app_manager",
     "access_token:libaccesstoken_sdk",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
