--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -43,6 +43,7 @@ unit_test_external_deps = [
   "access_token:libaccesstoken_sdk",
   "bundle_framework:appexecfwk_core",
   "c_utils:utils",
+  "common_event_service:cesfwk_innerkits",
   "hilog:libhilog",
   "ipc:ipc_core",
   "safwk:system_ability_fwk",
