--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -71,6 +71,7 @@ ohos_shared_library("nfc_service") {
     "src/tags/tag_session.cpp",
     "src/tags/tag_session_stub.cpp",
     "src/utils/nfc_chip_type_parser.cpp",
+    "src/utils/nfc_hisysevent.cpp",
     "src/utils/nfc_timer.cpp",
     "src/utils/nfc_watch_dog.cpp",
     "src/utils/permission_tools.cpp",
@@ -97,6 +98,7 @@ ohos_shared_library("nfc_service") {
     "common_event_service:cesfwk_innerkits",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
+    "hisysevent:libhisysevent",
     "ipc:ipc_core",
     "miscdevice:vibrator_interface_native",
     "preferences:native_preferences",
