--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -4,14 +4,14 @@
             "cmds" : [
                 "chown nfc /sys/nfc/nfc_chip_type",
                 "chgrp nfc /sys/nfc/nfc_chip_type",
-                "mkdir /data/nfc",
-                "start nfc_service"
+                "mkdir /data/nfc"
             ]
         }
     ],
     "services" : [{
             "name" : "nfc_service",
             "path" : ["/system/bin/sa_main", "/system/profile/nfc_service.json"],
+            "ondemand" : true,
             "uid" : "nfc",
             "gid" : ["nfc", "shell"],
             "secon" : "u:r:nfc_service:s0",
