--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -89,6 +89,7 @@ ohos_shared_library("nfc_service") {
 
   external_deps = [
     "ability_base:want",
+    "ability_base:zuri",
     "ability_runtime:ability_manager",
     "ability_runtime:app_manager",
     "access_token:libaccesstoken_sdk",
@@ -97,6 +98,7 @@ ohos_shared_library("nfc_service") {
     "c_utils:utils",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
+    "data_share:datashare_consumer",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
