add permission for obtain app state, and setCode to nfc state commonEvent
Signed-off-by: zhaoyingying <zhaoyingying21@huawei.com>

--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -17,7 +17,7 @@
             "secon" : "u:r:nfc_service:s0",
             "caps" : ["CAP_NET_BIND_SERVICE", "CAP_NET_RAW"],
             "apl" : "system_basic",
-            "permission" : ["ohos.permission.VIBRATE", "ohos.permission.MANAGE_SECURE_SETTINGS"]
+            "permission" : ["ohos.permission.VIBRATE", "ohos.permission.MANAGE_SECURE_SETTINGS", "ohos.permission.RUNNING_STATE_OBSERVER"]
         }
     ]
 }
