nfc/fuzztest modify
Signed-off-by: fengyong <fengyong21@h-partners.com>

--- a/test/fuzztest/controller_test/nfccontroller/nfccontroller_fuzzer/BUILD.gn
+++ b/test/fuzztest/controller_test/nfccontroller/nfccontroller_fuzzer/BUILD.gn
@@ -16,7 +16,7 @@ import("//build/test.gni")
 import("../../../../../nfc.gni")
 
 ohos_fuzztest("NfcControllerFuzzTest") {
-  module_out_path = "nfc/services"
+  module_out_path = fuzz_module_out_path
 
   fuzz_config_file = "$NFC_DIR/test/fuzztest/controller_test/nfccontroller/nfccontroller_fuzzer"
 
