--- a/test/fuzztest/services_test/tags_test/tagsessionstub/tagsessionstub_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/tags_test/tagsessionstub/tagsessionstub_fuzzer/BUILD.gn
@@ -16,7 +16,7 @@ import("//build/test.gni")
 import("../../../../../../nfc.gni")
 
 ohos_fuzztest("TagSessionStubFuzzTest") {
-  module_out_path = "nfc/services"
+  module_out_path = fuzz_module_out_path
 
   fuzz_config_file = "$NFC_DIR/test/fuzztest/services_test/tags_test/tagsessionstub/tagsessionstub_fuzzer"
 
