nfc add run on demaind func
Signed-off-by: hefeiyue <hefeiyue@h-partners.com>

--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -67,7 +67,9 @@ ohos_shared_library("nfc_service") {
     "src/nci_adapter/tag_nci_adapter.cpp",
     "src/nci_adapter/vendor_ext_service.cpp",
     "src/nfc_event_handler.cpp",
+    "src/nfc_polling_manager.cpp",
     "src/nfc_polling_params.cpp",
+    "src/nfc_routing_manager.cpp",
     "src/nfc_sa_manager.cpp",
     "src/nfc_service.cpp",
     "src/run_on_demaind_manager.cpp",
