--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -24,7 +24,15 @@ config("nfc_service_unit_test_config") {
     "$NFC_DIR/interfaces/inner_api/include/tags",
     "$NFC_DIR/interfaces/inner_api/include/cardEmulation",
     "$NFC_DIR/services/include",
+    "$NFC_DIR/services/src/nci_adapter/nci_native_default/native_impl_default",
     "$NFC_DIR/services/src",
+
+    "//third_party/libnfc-nci/SN100x/src/gki/common/",
+    "//third_party/libnfc-nci/SN100x/src/gki/ulinux/",
+    "//third_party/libnfc-nci/SN100x/src/include",
+    "//third_party/libnfc-nci/SN100x/src/nfa/include",
+    "//third_party/libnfc-nci/SN100x/src/nfc/include",
+    "//third_party/libnfc-nci/SN100x/utils/include",
   ]
 
   defines = []
@@ -172,17 +180,20 @@ ohos_unittest("services_tags_test") {
 
 ohos_unittest("nci_adapter_test") {
   module_out_path = "nfc/services"
+  configs = [ ":nfc_service_unit_test_config" ]
+  cflags_cc = [ "-DNXP_EXTNS=TRUE" ]
 
   sources = [
-    "nci_adapter_test/nfcc_host_test.cpp",
     "nci_adapter_test/nfcc_nci_adapter_test.cpp",
     "nci_adapter_test/tag_host_test.cpp",
     "nci_adapter_test/tag_nci_adapter_test.cpp",
   ]
 
-  configs = [ ":nfc_service_unit_test_config" ]
-
   deps = unit_test_deps
+  deps += [
+    "$NFC_DIR/services/src/nci_adapter/nci_native_default:nfc_nci_native_default",
+    "//third_party/libnfc-nci/SN100x:nfc-nci",
+  ]
 
   external_deps = unit_test_external_deps
 
@@ -195,10 +206,12 @@ group("nfc_service_unittest") {
   deps = [
     ":cardemulation_test",
     ":controller_test",
-    ":nci_adapter_test",
     ":public_test",
     ":services_tags_test",
     ":services_test",
     ":tags_test",
   ]
+  if (!nfc_use_vendor_nci_native) {
+    deps += [ ":nci_adapter_test" ]
+  }
 }
