--- a/interfaces/inner_api/BUILD.gn
+++ b/interfaces/inner_api/BUILD.gn
@@ -45,6 +45,7 @@ ohos_shared_library("nfc_inner_kits") {
   branch_protector_ret = "pac_ret"
   sources = [
     "src/cardEmulation/cardEmulation.cpp",
+    "src/controller/ndef_msg_callback_stub.cpp",
     "src/controller/nfc_controller.cpp",
     "src/controller/nfc_controller_callback_stub.cpp",
     "src/controller/nfc_controller_proxy.cpp",
