--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -55,9 +55,6 @@ ohos_shared_library("nfc_service") {
     "src/ipc/tags/foreground_death_recipient.cpp",
     "src/ipc/tags/tag_session.cpp",
     "src/ipc/tags/tag_session_stub.cpp",
-    "src/nci_adapter/nci_ce_proxy.cpp",
-    "src/nci_adapter/nci_nfcc_proxy.cpp",
-    "src/nci_adapter/nci_tag_proxy.cpp",
     "src/nci_adapter/nci_native_proxy.cpp",
     "src/nfc_event_handler.cpp",
     "src/nfc_polling_manager.cpp",
@@ -72,6 +69,10 @@ ohos_shared_library("nfc_service") {
   ]
 
   public_configs = [ ":nfc_config" ]
+
+  if (!nfc_use_vendor_nci_native) {
+    public_deps += [ "src/nci_adapter/nci_native_default:nfc_nci_native_default" ]
+  }
 
   deps = [
     "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common",
