--- a/services/src/nci_adapter/nci_native_default/BUILD.gn
+++ b/services/src/nci_adapter/nci_native_default/BUILD.gn
@@ -30,7 +30,7 @@ config("nci_native_default_config") {
     "//third_party/libnfc-nci/SN100x/src/nfc/include",
     "//third_party/libnfc-nci/SN100x/utils/include",
     "$NFC_DIR/interfaces/inner_api/common",
-    "include"
+    "include",
   ]
 }
 
@@ -45,16 +45,16 @@ ohos_shared_library("nci_native_default") {
   stack_protector_ret = true
   sources = [
     "src/extns.cpp",
+    "src/nci_ce_impl_default.cpp",
+    "src/nci_native_adapter_default.cpp",
+    "src/nci_nfcc_impl_default.cpp",
+    "src/nci_tag_impl_default.cpp",
     "src/nfcc_nci_adapter.cpp",
     "src/routing_manager.cpp",
     "src/synchronize_event.cpp",
     "src/tag_host.cpp",
     "src/tag_native_impl.cpp",
     "src/tag_nci_adapter.cpp",
-    "src/nci_ce_impl_default.cpp",
-    "src/nci_native_adapter_default.cpp",
-    "src/nci_nfcc_impl_default.cpp",
-    "src/nci_tag_impl_default.cpp",
   ]
 
   public_configs = [ ":nci_native_default_config" ]
