fix:fix the Fuzz test
Signed-off-by: dongbosi@huawei.com <dongbosi@huawei.com>

--- a/test/fuzztest/services_test/controller_test/nfccontrollerstub/nfccontrollerstub_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/controller_test/nfccontrollerstub/nfccontrollerstub_fuzzer/BUILD.gn
@@ -38,7 +38,7 @@ ohos_fuzztest("NfcControllerStubFuzzTest") {
   deps = [
     "$NFC_DIR/interfaces/inner_api:nfc_inner_kits",
     "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common",
-    "$NFC_DIR/services:nfc_service",
+    "$NFC_DIR/services:nfc_service_static",
   ]
 
   external_deps = [
