--- a/test/fuzztest/services_test/tags_test/tagsessionstub/tagsessionstub_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/tags_test/tagsessionstub/tagsessionstub_fuzzer/BUILD.gn
@@ -42,7 +42,7 @@ ohos_fuzztest("TagSessionStubFuzzTest") {
   deps = [
     "$NFC_DIR/interfaces/inner_api:nfc_inner_kits",
     "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common",
-    "$NFC_DIR/services:nfc_service",
+    "$NFC_DIR/services:nfc_service_static",
   ]
 
   external_deps = [
