--- a/frameworks/js/napi/tag/BUILD.gn
+++ b/frameworks/js/napi/tag/BUILD.gn
@@ -59,7 +59,7 @@ ohos_shared_library("tag") {
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
-    "ipc:ipc_napi_common",
+    "ipc:ipc_napi",
     "napi:ace_napi",
     "samgr:samgr_proxy",
   ]
