Signed-off-by: wujie <1255071198@qq.com>
test: add fuzz testcase

--- a/test/fuzztest/BUILD.gn
+++ b/test/fuzztest/BUILD.gn
@@ -18,7 +18,9 @@ group("fuzztest") {
   deps = [
     "controller_test/nfccontroller:nfccontroller_fuzztest",
     "services_test/controller_test/nfccontrollerstub:nfccontrollerstub_fuzztest",
+    "services_test/tagdispatcher_test/tagdispatcher:tagdispatcher_fuzztest",
     "services_test/tags_test/tagsessionstub:tagsessionstub_fuzztest",
+    "services_test/utils_test/nfctimer:nfctimer_fuzztest",
     "tags_test/basictagsession:basictagsession_fuzztest",
     "tags_test/iso15693tag:iso15693tag_fuzztest",
     "tags_test/isodeptag:isodeptag_fuzztest",
