Signed-off-by: wujie <1255071198@qq.com>
test: add nfc fuzz test case

--- a/test/fuzztest/services_test/tagdispatcher_test/tagdispatcher/tagdispatcher_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/tagdispatcher_test/tagdispatcher/tagdispatcher_fuzzer/BUILD.gn
@@ -36,6 +36,7 @@ ohos_fuzztest("TagDisPatcherFuzzTest") {
 
   sources = [
     "tagdispatcher_fuzzer.cpp",
+    "nfc_service_fuzz.cpp",
   ]
 
   deps = [
