feature get payment service support
Signed-off-by: yangyannan <yangyannan@huawei.com>

--- a/frameworks/js/napi/cardEmulation/BUILD.gn
+++ b/frameworks/js/napi/cardEmulation/BUILD.gn
@@ -50,6 +50,7 @@ ohos_shared_library("cardemulation") {
     "hilog:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
+    "bundle_framework:appexecfwk_base",
   ]
 
   relative_install_dir = "module/nfc"
