Signed-off-by: wujie <1255071198@qq.com>
test: add nfc fuzz test case

--- a/test/fuzztest/services_test/utils_test/nfctimer/nfctimer_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/utils_test/nfctimer/nfctimer_fuzzer/BUILD.gn
@@ -45,6 +45,7 @@ ohos_fuzztest("NfcTimerFuzzTest") {
 
   external_deps = [
     "ability_base:want",
+    "ability_runtime:ability_manager",
     "access_token:libaccesstoken_sdk",
     "c_utils:utils",
     "ipc:ipc_core",
