--- a/test/fuzztest/controller_test/nfccontroller/nfccontroller_fuzzer/BUILD.gn
+++ b/test/fuzztest/controller_test/nfccontroller/nfccontroller_fuzzer/BUILD.gn
@@ -42,6 +42,7 @@ ohos_fuzztest("NfcControllerFuzzTest") {
 
   external_deps = [
     "ability_base:want",
+    "ability_runtime:ability_manager",
     "c_utils:utils",
     "ipc:ipc_core",
   ]
