--- a/test/fuzztest/services_test/controller_test/nfccontrollerstub/nfccontrollerstub_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/controller_test/nfccontrollerstub/nfccontrollerstub_fuzzer/BUILD.gn
@@ -43,6 +43,7 @@ ohos_fuzztest("NfcControllerStubFuzzTest") {
 
   external_deps = [
     "ability_base:want",
+    "ability_runtime:ability_manager",
     "access_token:libaccesstoken_sdk",
     "c_utils:utils",
     "ipc:ipc_core",
