--- a/test/fuzztest/services_test/tagdispatcher_test/tagdispatcher/tagdispatcher_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/tagdispatcher_test/tagdispatcher/tagdispatcher_fuzzer/BUILD.gn
@@ -23,6 +23,7 @@ ohos_fuzztest("TagDisPatcherFuzzTest") {
   include_dirs = [
     "$NFC_DIR/services/include",
     "$NFC_DIR/services/src",
+    "$NFC_DIR/service/src/tags",
     "$NFC_DIR/interfaces/inner_api/common",
     "$NFC_DIR/interfaces/inner_api/include",
   ]
@@ -47,6 +48,7 @@ ohos_fuzztest("TagDisPatcherFuzzTest") {
 
   external_deps = [
     "ability_base:want",
+    "ability_runtime:ability_manager",
     "access_token:libaccesstoken_sdk",
     "c_utils:utils",
     "ipc:ipc_core",
