--- a/test/fuzztest/tags_test/taginfo/setconnectedtagtech_fuzzer/BUILD.gn
+++ b/test/fuzztest/tags_test/taginfo/setconnectedtagtech_fuzzer/BUILD.gn
@@ -43,6 +43,7 @@ ohos_fuzztest("SetConnectedTagTechFuzzTest") {
 
   external_deps = [
     "ability_base:want",
+    "ability_runtime:ability_manager",
     "c_utils:utils",
     "ipc:ipc_core",
   ]
