--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -50,6 +50,7 @@ unit_test_deps = [
 
 unit_test_external_deps = [
   "ability_base:want",
+  "ability_runtime:ability_manager",
   "access_token:libaccesstoken_sdk",
   "bundle_framework:appexecfwk_core",
   "c_utils:utils",
